deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geekebmly
  labels:
    name: geekebmly
