deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: geekebmly
  name: geekebmly-dpl
spec:
  selector:
    matchLabels:
      app: geekebmly
  replicas: 1
  template:
    metadata:
      labels:
        app: geekebmly
    spec:
      containers:
        - image: nginx:1.27-alpine
          imagePullPolicy: Always
          name: geekembly
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: geekebmly
  name: geekebmly-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: geekebmly
